--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer>
     <div class="ctnr">
         <div class="content">
-            <a href="/index.html" class="logo_anchor">
+            <a href="/" class="logo_anchor">
                 <img src="/tcn-logo-default.svg" alt="The Clean Network logo" />
             </a>
             
@@ -32,7 +32,7 @@
             
             <a href="#" class="tel">
                 <span class="icon"></span>
-                Birmingham: 0121 3927529v
+                Birmingham: 0121 3927529
             </a>
 
             <hr>
