--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -11,8 +11,9 @@ import BaseHead from "../components/BaseHead.astro";
 	<head>
 		<BaseHead title={title} description={description} />
 		
-		<script src="../src/scripts/tiny-slider.js" defer></script>
-		<link rel="stylesheet" href="../src/styles/tiny-slider.css">
+		<script src="../../src/scripts/tiny-slider.js" defer></script>
+
+		<link rel="stylesheet" href="../../src/styles/tiny-slider.css">
 	</head>
 	<body>
 		<slot />
