--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,10 +16,10 @@
             <a href="#"><span></span>Sectors</a>
             <a href="#"><span></span>Locations</a>
             <a href="#"><span></span>About</a>
-            <a href="#"><span></span>Contact</a>
+            <a href="#"><span></span>contact_box</a>
         </nav>
 
-        <div class="contact">
+        <div class="contact_box">
             <a href="#" class="email">
                 <span class="icon"></span>
                 office@cleannetwork.co.uk
@@ -113,60 +113,6 @@
         border-bottom: 0.5rem solid var(--highlight);
         border-right: 0.5rem solid var(--highlight);
         transition: border 0s ease;
-    }
-
-    footer .contact {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .contact a {
-        display: flex;
-        gap:1rem;
-        align-items: center;
-    }
-
-    .contact a .icon {
-        width: 1.6rem;
-        height: 1.6rem;
-    }
-
-    .contact hr {
-        margin: 1rem 0;
-        width: 2rem;
-        height: 0.1rem;
-        background-color: var(--grey);
-    }
-
-    .contact .email .icon {
-        background-image: url('/icons/mail.svg');
-    }
-
-    .contact .tel .icon {
-        background-image: url('/icons/tel.svg');
-    }
-
-    .contact .social {
-        display: flex;
-        gap:1.5rem;
-    }
-
-    .social .icon {
-        width: 2.3rem;
-        height: 2.3rem;
-    }
-
-    .instagram.icon {
-        background-image: url('/icons/instagram.svg');
-    }
-
-    .facebook.icon {
-        background-image: url('/icons/facebook.svg');
-    }
-
-    .linkedin.icon {
-        background-image: url('/icons/linkedin.svg');
     }
 
     
