--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -227,6 +227,90 @@ const services = await getCollection("services");
 				<a href="#" class="cta">Simulate with our <b>Rate Calculator</b></a>
 			</div>
 		</section>
+
+		<section class="contact" id="contact">
+			<div class="ctnr">
+				<form name="contact" method="POST" data-netlify="true">
+					<h3>Get in touch</h3>
+
+					<div class="flex">
+						<p>
+						  <label>First name: <input type="text" name="name" /></label>
+						</p>
+	
+						<p>
+						  <label>Last name: <input type="text" name="name" /></label>
+						</p>
+					</div>
+
+					<p>
+					  <label>Email: <input type="email" name="email" /></label>
+					</p>
+
+					<p>
+					  <label>Message: <textarea name="message"></textarea></label>
+					</p>
+
+					<p>
+					  <button type="submit">Request a quote</button>
+					</p>
+				  </form>
+			</div>
+
+			<script>
+				import "../scripts/form.js";
+			</script>
+		</section>
+
+		<section class="find_us panel">
+			<div class="ctnr">
+				<div class="content">
+					<h3>Find us</h3>
+
+					<p>We’re based in the City of London & Birmingham City Centre so if you’d like us to pop over and give you a quote contact us using our details below. You’re also more than welcome to drop by our office too of course.</p>
+
+					<div class="flex column">
+						<address><strong>London</strong>: 6-8 Knights Court, London, EC1M 4NH</address>
+	
+						<address><strong>Birmingham</strong>: 37 Regents Place, Birmingham, B3 1UG</address>
+					</div>
+
+					<hr>
+					
+
+					<div class="contact_box">
+						<a href="#" class="email">
+							<span class="icon"></span>
+							office@cleannetwork.co.uk
+						</a>
+						
+						<a href="#" class="tel">
+							<span class="icon"></span>
+							London: 020 3411 0275
+						</a>
+						
+						<a href="#" class="tel">
+							<span class="icon"></span>
+							Birmingham: 0121 3927529
+						</a>
+			
+						<hr>
+			
+						<div class="social">
+							<a href="#" class="icon instagram" title="Instagram"></a>
+			
+							<a href="#" class="icon facebook" title="Facebook"></a>
+			
+							<a href="#" class="icon linkedin" title="LinkedIn"></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3140.0051940248136!2d-0.10620783391475411!3d51.52262576077149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761d37914708a9%3A0x153c94a1c878c6d1!2sClean%20Network!5e1!3m2!1sen!2sus!4v1689281322280!5m2!1sen!2sus" width="100" height="100" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+		</section>
 	</main>
 	<Footer />
 </Layout>
@@ -235,7 +319,7 @@ const services = await getCollection("services");
 	main {
 	}
 
-	.intro {
+	.intro, .contact {
 		background-image: url("/images/office-bg01.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -246,12 +330,12 @@ const services = await getCollection("services");
 	.intro > .ctnr {
 		display: flex;
 		flex-direction: column;
-    	gap: clamp(2rem,6vmin,7rem);
+    	gap: clamp(2rem,8vw,7rem);
 	}
 
 	.intro > .ctnr .content {
 		width: var(--mobile-width);
-		margin: clamp(3rem, 8vw, 6rem) auto 0;
+		margin: clamp(3rem, 10vw, 6rem) auto 0;
 		display: flex;
 		flex-direction: column;
 		gap: clamp(1rem, 2vmin, 2.5rem);
@@ -271,7 +355,7 @@ const services = await getCollection("services");
 
 	.intro .bt_ctnr {
 		flex-flow: row wrap;
-		gap: 1.4rem;
+    	gap: 1.6rem;
 		align-items: center;
 	}
 
@@ -298,7 +382,7 @@ const services = await getCollection("services");
 	}
 
 	.intro .bt_ctnr .flex.column {
-		gap: 0.6rem;
+    	gap: 0.8rem;
 		font-weight: 600;
 		font-size: clamp(1.2rem, 3.5vmin, 1.4rem);
 	}
@@ -325,7 +409,7 @@ const services = await getCollection("services");
 	}
 
 	.showcase img {
-		height: clamp(30rem, 50vw, 62rem);
+		height: clamp(30rem, 70vw, 60rem);
 		width: 100%;
 		object-fit: cover;
 		object-position: center;
@@ -416,7 +500,7 @@ const services = await getCollection("services");
 		font-weight: 500;
 	}
 
-	.panel h2::after {
+	.panel h3::after {
 		content:'';
     	width: 2.5rem;
 		height: 3rem;
@@ -427,11 +511,11 @@ const services = await getCollection("services");
 		background-repeat: no-repeat;
 	}
 
-	.services h2::after {
+	.services h3::after {
 		background-image: url('/icons/services.svg');
 	}
 
-	.sectors h2::after {
+	.sectors h3::after {
 		background-image: url('/icons/sectors-grey.svg');
 	}
 
@@ -449,7 +533,7 @@ const services = await getCollection("services");
 	}
 
 	.panel .cta {
-		font-size: clamp(1.3rem,5vmin,2.1rem);
+		font-size: clamp(1.3rem,5vmin,2.2rem);
 		font-weight: 500;
 		letter-spacing: 0.05rem;
 		display: flex;
@@ -484,7 +568,7 @@ const services = await getCollection("services");
 		display: flex;
     	height: clamp(30rem,50vw,62rem);
     	background-color: rgba(255,255,255,0.2);
-    	max-height: 70vh;
+    	max-height: 76vh;
 	}
 
 	.panel .subsets {
@@ -567,7 +651,8 @@ const services = await getCollection("services");
 	}
 
 	.testimonials > .ctnr {
-    	max-width: clamp(9rem,100vw,110rem);
+    	/* max-width: clamp(9rem,100vw,110rem); */
+		max-width: 100%;
 		margin-inline: auto;
 	}
 
@@ -616,7 +701,7 @@ const services = await getCollection("services");
 	}
 
 	section.rates {
-    	padding: clamp(3rem,10vw,8rem) 0 clamp(3rem,12vw,8rem);
+    	padding: clamp(3rem,13vw,7rem) 0;
 		background-image: url('/textures/dot-grid.jpg');
 		background-size: 30rem;
 	}
@@ -632,13 +717,13 @@ const services = await getCollection("services");
 	}
 
 	.rates h3 {
-		font-size: clamp(2rem,7vw,5rem);
+    	font-size: clamp(2rem,10vw,6rem);
 		color: var(--highlight);
 	}
 
 	.rates p {
-		font-size: clamp(1.5rem,4vmin,2rem);
-		max-width: 70rem;
+		font-size: clamp(1.5rem,4vmin,2.2rem);
+		max-width: 75rem;
 		line-height: 1.5;
 		margin-inline: auto;
 		font-weight: 500;
@@ -650,7 +735,7 @@ const services = await getCollection("services");
 		border: 0.2rem solid var(--light-d);
 		font-size: clamp(1.5rem,4vmin,1.8rem);
 		border-radius: 0.3rem;
-		margin-top: 2rem;
+		margin-top: 1rem;
 		display: inline-flex;
 		align-items: center;
 		font-weight: 500;
@@ -672,20 +757,83 @@ const services = await getCollection("services");
 		color: var(--highlight);
 	}
 
+	section.contact {
+    	padding: clamp(3rem,16vw,8rem) 0;
+		background-color: var(--light-a);
+		background-blend-mode: luminosity;
+	}
+
+	.contact > .ctnr {
+		width: clamp(9rem,85vw,62rem);
+		margin-inline: auto;
+		background-color: var(--light);
+		padding: clamp(3rem,9vw,5rem) clamp(2rem,6vw,6rem) 0;
+		box-sizing: border-box;
+		border-radius: 1rem;
+	}
+
+	.contact h3 {
+		text-align: center;
+		font-size: clamp(2rem,8vw,5rem);
+		color:var(--primary-a);
+		margin-bottom: 1rem;
+
+	}
+
+	section.find_us {
+		background-color:var(--primary-a);
+		color:var(--light);
+	}
+
+	.find_us > .ctnr {
+		flex-direction: column;
+	}
+
+	.find_us address {
+		font-size: clamp(1.3rem,3.2vmin,2rem);
+		font-style: unset;
+	}
+
+	.find_us .flex.column {
+		gap:1rem;
+	}
+
+	.find_us address strong {
+		font-weight: 500;
+	}
+
+	.find_us .map {
+		flex: 1;
+		display: flex;
+		align-items: center;
+	}
+
+	.find_us .map iframe {
+		width: clamp(10rem,85vw,60rem);
+		height: clamp(10rem,85vw,60rem);
+		display: flex;
+		margin: 0 auto 7rem;
+		border-radius: 2rem;
+		border: 0.2rem solid var(--primary);
+	}
 
 
 
 
 
-
-
-
-	@media screen and (min-width: 900px) {
+	@media screen and (min-width: 850px) {
 		.intro > .ctnr {
 			flex-direction: row;
 			width: calc(100% - (100% - var(--mobile-width)) / 2);
 			margin-left: auto;
 			gap: 0;
+    		align-items: center;
+		}
+
+		.intro > .ctnr .content {
+			margin: clamp(3rem,9vw,13rem) auto clamp(3rem,9vw,13rem) 0;
+			width: unset;
+			max-width: clamp(40rem, 46vw, 85rem);
 		}
 
 		.intro h1 {
@@ -693,24 +841,19 @@ const services = await getCollection("services");
 		}
 
 		.intro h2 {
-			font-size: clamp(1.8rem, 1.8vw, 2.2rem);
-			max-width: 65rem;
-		}
-
-		.intro > .ctnr .content {
-    		margin: clamp(3rem,9vw,13rem) auto;
-			width: unset;
-			max-width: clamp(40rem, 46vw, 85rem);
+			font-size: clamp(1.8rem,1.8vw,2rem);
+			max-width: clamp(10rem, 85%, 60rem);
 		}
 
 		.showcase {
 			flex: 1;
 			clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
+    		max-width: 150rem;
 		}
 
 		.showcase img {
-			height: 100%;
-			max-height: 80vh;
+			/* height: 100%; */
+			/* max-height: 80vh; */
 			display: flex;
 		}
 
@@ -752,6 +895,10 @@ const services = await getCollection("services");
 			width: 0.1rem;
 			height: auto;
     		margin: 0 clamp(1rem, 2vw, 3rem);
+		}
+
+		.find_us .map iframe {
+			margin:0 auto;
 		}
 
 	}
