--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const services = await getCollection("services");
 
                     <div class="subsets">
                         <div>
-                            <a href="#" class="heading indoor icon"
+                            <a href="/services/" class="heading indoor icon"
                                 >Indoor Cleaning</a
                             >
 
@@ -61,7 +61,7 @@ const services = await getCollection("services");
                         <hr />
 
                         <div>
-                            <a href="#" class="heading outdoor icon"
+                            <a href="/services/" class="heading outdoor icon"
                                 >External Cleaning</a
                             >
 
@@ -115,11 +115,11 @@ const services = await getCollection("services");
                     </div>
                 </div>
 
-                <a href="">Locations</a>
+                <a href="/locations/">Locations</a>
 
                 <div class="subnav">
                     <div class="flex">
-                        <a href="">About</a>
+                        <a href="/about/">About</a>
 
                         <button
                             class="expand icon"
@@ -132,15 +132,15 @@ const services = await getCollection("services");
 
                     <div class="subsets">
                         <div>
-                            <a href="#" class="heading about icon">About Us</a>
-                            <a href="#" class="heading rates icon">Rates</a>
+                            <a href="/about/" class="heading about icon">About Us</a>
+                            <a href="/about/" class="heading rates icon">Rates</a>
                         </div>
                     </div>
                 </div>
 
-                <a href="">Contact</a>
+                <a href="/#contact">Contact</a>
 
-                <a href="#" class="cta">Get a Free Quote</a>
+                <a href="/#contact" class="cta">Get a Free Quote</a>
             </div>
         </nav>
 
@@ -258,7 +258,7 @@ const services = await getCollection("services");
         backdrop-filter: blur(0.8rem);
         border-radius: 0 0 0 1.4rem;
         transform: translateY(100%);
-        padding: 2rem 3rem 2rem 0;
+        padding: 2rem 2rem 2rem 0;
         color: var(--primary-a);
         box-sizing: border-box;
         position: absolute;
@@ -267,7 +267,6 @@ const services = await getCollection("services");
         font-weight: 600;
         max-height: 62vh;
         bottom: -0.2rem;
-        overflow: auto;
         opacity: 0;
         right: 0;
     }
