--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -27,17 +27,21 @@ import "../../styles/subpages.css"
                 {
                     services.map((services) => (
                         <>
-                            <section class="service_box">
+                            <section class="panel service_box">
                                 <div class="ctnr">
                                     <div class="content">
-                                        <h2>
+                                        <h2 class="title">
                                             {services.data.title}
                                         </h2>
 
-                                        <p>{services.data.description}</p>
+                                        <p class="description">{services.data.description}</p>
+
+                                        <a href={`/services/${services.slug}`} class="cta"><span></span> About <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Service</span></a>
                                     </div>
                                     
-                                    <img src={services.data.image}/>
+				                    <div class="image">
+                                        <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`}/>
+                                    </div>
                                 </div>
                             </section>
                         </>
@@ -49,3 +53,41 @@ import "../../styles/subpages.css"
         <Footer />
     </body>
 </html>
+
+<style>
+    .panel {
+        background-image: linear-gradient(180deg, var(--light-a), transparent);
+    }
+    .panel > .ctnr {
+        margin-bottom: 3rem;
+    }
+    .panel .title {
+        font-size: clamp(2rem,10vw,5rem);
+        text-shadow: -0.6rem 0.6rem rgb(148 197 221 / 20%);
+        font-weight: 600;
+    }
+    .panel .content .description {
+        font-size: clamp(1.5rem,4.2vmin,1.9rem);
+    }
+
+    .panel .cta {
+        font-weight: 600;
+    }
+
+    .panel .cta:hover {
+        text-decoration-color: var(--light-a);
+    }
+
+    .lowercase {
+        text-transform: lowercase;
+    }
+
+    @media screen and (min-width:850px) {
+        .panel {
+            background-image: linear-gradient(-90deg, var(--light-d), transparent);
+        }
+        .panel > .ctnr {
+            border-bottom: 0.2rem solid var(--light-a);
+        }
+    }
+</style>
