--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -246,7 +246,7 @@ body form button[type='submit'].submited {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    font-size: clamp(1rem,3.9vmin,1.7rem);
+    font-size: clamp(1rem,4vmin,1.7rem);
     line-height: 1.5;
 }
 
@@ -254,6 +254,7 @@ body form button[type='submit'].submited {
     display: flex;
     gap:1rem;
     align-items: center;
+    width: fit-content;
 }
 
 .contact_box a .icon {
@@ -262,10 +263,10 @@ body form button[type='submit'].submited {
 }
 
 .contact_box hr {
-    margin: 1rem 0;
+    margin: 1.5rem 0;
     width: 2rem;
     height: 0.1rem;
-    background-color: #f8f8ff33;
+    background-color: rgb(248 248 255 / 20%);
 }
 
 .contact_box .email .icon {
@@ -282,8 +283,8 @@ body form button[type='submit'].submited {
 }
 
 .social .icon {
-    width: 2.3rem;
-    height: 2.3rem;
+    width: 2rem;
+    height: 2rem;
 }
 
 .instagram.icon {
@@ -299,6 +300,127 @@ body form button[type='submit'].submited {
 }
 
 
+.panel > .ctnr {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.panel .content {
+    width: var(--mobile-width);
+    margin-inline: auto;
+    padding: clamp(3rem,10vmin,8rem) 0 clamp(3rem,12vmin,8rem);
+    display: flex;
+    flex-direction: column;
+    gap: clamp(1rem, 4vmin, 1.5rem);
+}
+
+.panel h3, .panel .title {
+    font-size: clamp(2rem, 11vw, 6rem);
+    font-weight: 500;
+}
+
+.panel h3::after {
+    content:'';
+    width: 2.5rem;
+    height: 3rem;
+    display: inline-block;
+    margin-left: 1rem;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.panel .content p, .panel .description {
+    font-size: clamp(1.5rem,4vmin,2rem);
+    max-width: 65rem;
+    line-height: 1.5;
+}
+
+.panel .content > hr, .panel .subsets hr {
+    width: 2rem;
+    margin: 1rem 0;
+    height:0.1rem;
+    background-color: rgb(248 248 255 / 20%);
+}
+
+.panel .cta {
+    font-size: clamp(1.3rem,5vmin,2.2rem);
+    font-weight: 500;
+    letter-spacing: 0.05rem;
+    width: fit-content;
+    text-underline-offset: 0.7rem;
+    line-height: 1.3;
+}
+
+.panel .cta:hover {
+    text-decoration: underline 0.2rem #ffffff33;
+}
+
+.panel .cta span:first-of-type {
+    display: inline-block;
+    border-bottom: 0.4rem solid var(--highlight);
+    border-right: 0.4rem solid var(--highlight);
+    border-top: 0.4rem solid transparent;
+    border-left: 0.4rem solid transparent;
+    transform: translateY(-40%) rotate(-45deg);
+    width: 0;
+    height: 0;
+    margin-right: 0.5rem;
+}
+
+.panel .image img {
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: flex;
+    height: clamp(30rem,50vw,62rem);
+    background-color: rgba(255,255,255,0.2);
+    max-height: calc(100dvh - clamp(1rem,16vmin,7.5rem));
+}
+
+.panel .subsets {
+    display: flex;
+    gap: clamp(1rem, 2vw, 2rem) 0;
+    flex-flow: row wrap;
+}
+
+.panel .subsets > div {
+    font-size: clamp(1.3rem,4.5vmin,2rem);
+}
+
+.panel .subsets .heading {
+    display: block;
+    color:var(--light);
+    font-size: 1em;
+    margin-bottom: 0.4rem;
+    font-weight: 500;
+}
+
+.panel .subsets a {
+    font-size: 0.7em;
+    color: var(--light-b);
+}
+
+.panel .subsets a:not(.heading) {
+    transition: color 0.4s ease;
+}
+
+.panel .subsets a:not(.heading):hover {
+    color:var(--light);
+    transition: color 0s ease;
+}
+
+.panel .subsets a:not(.heading):not(:last-child):after {
+    content: "";
+    position: relative;
+    width: 0.3rem;
+    height: 0.3rem;
+    display: inline-block;
+    background-color: var(--light-b);
+    border-radius: 1rem;
+    margin: 0 0.4rem;
+    transform: translateY(-100%);
+}
 
 
 
@@ -307,6 +429,49 @@ body form button[type='submit'].submited {
 
 
 
+@media (min-width:850px) {
+
+    .panel > .ctnr {
+        flex-direction: row;
+        width: calc(100% - (100% - var(--mobile-width)) / 2);
+        margin-left: auto;
+    }
+
+    .panel .content {
+        margin-right: 5vw;
+        width: unset;
+        max-width: clamp(40rem,50vw,95rem);
+        flex: 1;
+    }
+
+    .locations.panel > .ctnr .content {
+        max-width: clamp(40rem,30vw,95rem);
+    }
+
+    .panel .image {
+        flex: 1;
+        position: relative;
+    }
+
+    .panel .image img {
+        height: 50rem;
+        position: sticky;
+        inset: 0;
+        top: clamp(1rem,16vmin,7.5rem);
+    }
+
+    .panel .subsets > div {
+        max-width: 50rem;
+        width: 45%;
+        flex: 1;
+    }
+
+    .panel .subsets hr {
+        width: 0.1rem;
+        height: auto;
+        margin: 0 clamp(1rem, 2vw, 3rem);
+    }
+}
 
 
 
